test/errhandling/ferguson/use-after-free.good
use-after-free.chpl:5: In function 'main':
use-after-free.chpl:14: error: attempt to dereference nil
use-after-free.chpl:9: note: this statement may be relevant
